--- a/index.html
+++ b/index.html
@@ -2,53 +2,64 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>OCR</title>
-    <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet" type="text/css">
-    <link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="assets/style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>OCR</title>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet" type="text/css">
+	<link href="https://unpkg.com/vuetify/dist/vuetify.min.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
-    <div id="vue-app">
-        <v-snackbar :timeout="1000" :top="true" :right="true" v-model="progress">
-            {{progress_text}}
-            <v-btn flat class="pink--text" @click.native="progress = false">Close</v-btn>
-        </v-snackbar>
-        <v-app id="main-app">
-            <v-toolbar class="grey darken-4">
-                <v-toolbar-title>Canvas Optical Character Recognition</v-toolbar-title>
-            </v-toolbar>
-            <main>
-                <v-content>
-                    <v-container fluid class="pa-5" >
-                        <v-row>
-                            <v-col xl8 md8 xs12 >
-                                <canvas id="mainCanvas" width="900" height="500" @mouseleave.capture="leave" @mousemove.capture="drawing" @mouseup.capture="endDraw"
-                                    @mousedown.capture="startDraw"></canvas>
-                            </v-col>
-                            <v-col xl4 md4 xs12>
-                                <h5 class="red--text darken-4">Output:</h5>
-                                <h2>{{data}}</h2>
-                                <h3 class="blue--text" v-show="math_answer">{{math_answer}}</h3>
-                                
-                                <v-btn class="blue darken-1" @click.native="clearCanvas" ripple>CLEAR CANVAS</v-btn>
-                            </v-col>
-                        </v-row>
-                    </v-container>
-                </v-content>
-            </main>
-        </v-app>
+	<div id="app">
 
-    </div>
+		<v-app>
+			
+			<v-toolbar color="grey darken-4" dark app>
+				<v-toolbar-title>Canvas Optical Character Recognition</v-toolbar-title>
+			</v-toolbar>
 
-    <script src="assets/bower_components/vue/dist/vue.js"></script>
-    <script src="https://unpkg.com/vuetify/dist/vuetify.min.js"></script>
-    <script src='https://cdn.rawgit.com/naptha/tesseract.js/1.0.10/dist/tesseract.js'></script>
-    <script src="assets/bower_components/mathjs/dist/math.js"></script>
-    <script src="assets/_init.js"></script>
+			<main>
+				<v-content>
+					<v-container fluid class="pa-5">
+						<v-layout row wrap>
+							<v-flex xs12 sm12 md8 lg8 xl8>
+								<canvas
+								id="mainCanvas"
+								width="900"
+								height="500"
+								@mouseleave.capture="leave"
+								@mousemove.capture="drawing"
+								@mouseup.capture="endDraw"
+								@mousedown.capture="startDraw"
+								></canvas>
+							</v-flex>
+							<v-flex xs12 sm12 md4 lg4 xl4>
+								<h5 class="red--text darken-4">Output:</h5>
+								<h2>{{data}}</h2>
+								<h3 class="blue--text" v-show="math_answer">{{math_answer}}</h3>
+								<v-btn color="blue darken-1" dark @click.native="clearCanvas" ripple>CLEAR CANVAS</v-btn>
+							</v-flex>
+						</v-layout>
+					</v-container>
+				</v-content>
+			</main>
+
+			<v-snackbar :timeout="1000" top right v-model="progress">
+				{{progress_text}}
+				<v-btn flat class="pink--text" @click.native="progress = false">Close</v-btn>
+			</v-snackbar>
+
+		</v-app>
+
+	</div>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.min.js"></script>
+	<script src="https://unpkg.com/vuetify/dist/vuetify.min.js"></script>
+	<script src='https://cdn.rawgit.com/naptha/tesseract.js/1.0.10/dist/tesseract.js'></script>
+	<script src="https://unpkg.com/mathjs@5.2.0/dist/math.min.js"></script>
+	<script src="assets/app.js"></script>
 </body>
 
 </html>
